argocd/kps/resources/kps_dashboard_ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.local.pleejr.org`)
    kind: Rule
    services:
    - name: grafana
      port: 80
      sticky:
        cookie:
          httpOnly: true
          name: grafana
          secure: true
          sameSite: none
  tls:
    secretName: grafana-cert-prod
